--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,16 @@
 services:
   - type: web
     name: telegram-432hz-bot
-    env: node
-    buildCommand: npm install
-    startCommand: npm start
-    autoDeploy: true
+    env: docker
+    region: singapore
+    plan: free
+    healthCheckPath: /health
     envVars:
       - key: TELEGRAM_BOT_TOKEN
         sync: false
       - key: NODE_ENV
         value: production
+    disk:
+      name: temp
+      mountPath: /app/temp
+      sizeGB: 1
