--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   bot:
     build: .
-    container_name: telegram-432hz-bot
+    container_name: telegram-432hz-bot-single
     environment:
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
       - NODE_ENV=production
@@ -12,3 +12,7 @@ services:
     volumes:
       - ./temp:/app/temp
     restart: unless-stopped
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
